# artie-agent-backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/backend/core/: redis.py  scheduler.py  supabase.py
app/backend/models/: trading.py
app/backend/services/: agent_orchestrator.py  brokerage_factory.py  conversations.py  market_calendar.py  memory.py  news.py  order_intents.py  plaid.py  recommendations.py  skills.py  snaptrade.py
app/backend/services/brokerages/: base.py  coinbase.py  fidelity.py
app/db/: supabase_client.py
app/routes/: _deps.py  conversations.py  exchanges.py  news.py  plaid.py  profile.py  recommendations.py  skills.py  snaptrade.py  trade.py
app/schemas/: conversations.py  memory.py  news.py  plaid.py  snaptrade.py  trade.py
artie_backend.egg-info/: PKG-INFO
docs/: frontend-phase3-integration.md
supabase/migrations/: 20260418120000_plaid_items.sql  20260419000000_snaptrade_users.sql  20260420000000_conversations.sql  20260420000100_user_memory.sql  20260420000200_news.sql
