[project]
name = "artie-backend"
version = "0.1.0"
description = "Agentic investment remote backend"
authors = [{name = "Mark Schmidt"}]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "groq",
    "python-multipart",
    "supabase",
    "requests",
    "yfinance",
    "pandas",
    "numpy>=1.26,<3.0.0",
    "tinyfish",     
    "python-dotenv",
    "plaid-python>=24.0",
    "snaptrade-python-sdk",
    "redis[asyncio]>=5",
    "apscheduler>=3.10",
    "feedparser",
    "tenacity",
    "httpx",
    "exchange-calendars>=4.5",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"